understanding decorators and comps

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Niggamania</title>
+  <title>AngularEssentials</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,3 +12,5 @@
   <app-root></app-root>
 </body>
 </html>
+
+<!-- no script imports  -->
